--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "admin-template"
   ],
   "dependencies": {
+    "area-data": "^5.0.6",
     "axios": "0.17.1",
     "clipboard": "1.7.1",
     "codemirror": "5.32.0",
@@ -38,6 +39,7 @@
     "simplemde": "1.11.2",
     "sortablejs": "1.7.0",
     "vue": "2.5.10",
+    "vue-area-linkage": "^5.0.1",
     "vue-count-to": "1.0.13",
     "vue-i18n": "7.3.2",
     "vue-multiselect": "2.0.8",
